--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask>=2.3.0,<3.0
 gunicorn>=20.1.0
 requests>=2.31.0,<2.32
 requests>=2.31.0,<3.0
-python-dotenv>=1.0.0<2.0
+python-dotenv>=1.0.0,<2.0
 shotgun_api3>=3.6.2,<3.7
